<resources>
    <string name="app_name">Pizza Buy</string>

    <!--  order fragment  -->
    <string name="text_view_topic">Pizza order</string>

    <string name="text_view_pizza_type">Type:</string>
    <string name="check_box_pizza_type_mozzarella">mozzarella</string>
    <string name="check_box_pizza_type_hawaiian">hawaiian</string>
    <string name="check_box_pizza_type_pepperoni">pepperoni</string>

    <string name="text_view_pizza_size">Size:</string>
    <string name="check_box_pizza_size_25">25</string>
    <string name="check_box_pizza_size_35">35</string>
    <string name="check_box_pizza_size_45">45</string>

    <string name="text_view_pizza_count">Count:</string>
    <string name="check_box_pizza_count_1">1</string>
    <string name="check_box_pizza_count_2">2</string>
    <string name="check_box_pizza_count_3">3</string>

    <string name="button_end_order">OK</string>
    <string name="button_show_orders">Show Orders</string>

    <!--  message fragment  -->
    <string name="fragment_text_type">Msg type</string>
    <string name="fragment_text">Msg text</string>

    <string name="fragment_button">OK</string>

    <string name="order_error">Order Error</string>
    <string name="order_success">Order Success</string>

    <!--  show order activity  -->
    <string name="text_orders">Orders</string>
    <string name="text_hint">Time: HH:mm dd-MM-yyyy\nType: name\nSize: num\nCount: num</string>
    <string name="button_end_activity">CLOSE</string>
    <string name="button_update">Update</string>


</resources>