<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg">

    <TextView
        android:id="@+id/textView_Topic"
        android:layout_width="177dp"
        android:layout_height="48dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="64dp"
        android:text="@string/text_view_topic"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_Pizza_Type"
        android:layout_width="54dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="152dp"
        android:text="@string/text_view_pizza_type"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_Pizza_Size"
        android:layout_width="54dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="316dp"
        android:text="@string/text_view_pizza_size"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_Pizza_Count"
        android:layout_width="58dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="384dp"
        android:text="@string/text_view_pizza_count"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBox_Pizza_Type_Mozzarella"
        android:layout_width="148dp"
        android:layout_height="48dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="144dp"
        android:checked="false"
        android:text="@string/check_box_pizza_type_mozzarella"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBox_Pizza_Type_Hawaiian"
        android:layout_width="148dp"
        android:layout_height="48dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="192dp"
        android:checked="false"
        android:text="@string/check_box_pizza_type_hawaiian"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBox_Pizza_Type_Pepperoni"
        android:layout_width="148dp"
        android:layout_height="48dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="240dp"
        android:checked="false"
        android:text="@string/check_box_pizza_type_pepperoni"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBox_Pizza_Size_25"
        android:layout_width="64dp"
        android:layout_height="48dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="308dp"
        android:checked="false"
        android:text="@string/check_box_pizza_size_25"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBox_Pizza_Size_35"
        android:layout_width="64dp"
        android:layout_height="48dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="308dp"
        android:checked="false"
        android:text="@string/check_box_pizza_size_35"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBox_Pizza_Size_45"
        android:layout_width="64dp"
        android:layout_height="48dp"
        android:layout_marginStart="212dp"
        android:layout_marginTop="308dp"
        android:checked="false"
        android:text="@string/check_box_pizza_size_45"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBox_Pizza_Count_1"
        android:layout_width="64dp"
        android:layout_height="48dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="376dp"
        android:checked="false"
        android:text="@string/check_box_pizza_count_1"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBox_Pizza_Count_2"
        android:layout_width="64dp"
        android:layout_height="48dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="376dp"
        android:checked="false"
        android:text="@string/check_box_pizza_count_2"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBox_Pizza_Count_3"
        android:layout_width="64dp"
        android:layout_height="48dp"
        android:layout_marginStart="212dp"
        android:layout_marginTop="376dp"
        android:checked="false"
        android:text="@string/check_box_pizza_count_3"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_Confirm"
        android:layout_width="94dp"
        android:layout_height="48dp"
        android:layout_marginTop="452dp"
        android:text="@string/button_end_order"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_Show_Orders"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:backgroundTint="#FF9800"
        android:text="@string/button_show_orders"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.987"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>